[update] Principal Advisors

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -177,6 +177,12 @@
                             <p class="commitee-names">Qian Li</p>
                             <p class="position">Curtin University, Australia</p>
                         </div>
+                        <div>
+                            <img src="img/" width="250px" height="250px">
+                            <p class="commitee-names">Manikandan Ravikiran</p>
+                            <p class="position">R&D Center, Hitachi India Pvt. Ltd</p>
+                        </div>
+
                     </div>
 
                 </div>
@@ -296,6 +302,54 @@
                             <p class="position">NIRAMAI Health Analytix, India</p>
 
                         </div>
+                        <div>
+                            <img src="img/sadashiva_gowda.jpg" width="250px" height="250px">
+                            <p class="commitee-names">B Sadashive Gowda</p>
+                            <p class="position">VVCE, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/ravi_kumar.jpeg" width="250px" height="250px">
+                            <p class="commitee-names">Ravi Kumar V</p>
+                            <p class="position">VVCE, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/anil_rana.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Anil Rana</p>
+                            <p class="position">MIT, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/ashalatha_nayak.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Ashalatha Nayak</p>
+                            <p class="position">MIT, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/kn_subramanya.png" width="250px" height="250px">
+                            <p class="commitee-names">K.N. Subramanya</p>
+                            <p class="position">RVCE, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/Ramakanthkumar_p.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Ramakanth Kumar P</p>
+                            <p class="position">RVCE, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/" width="250px" height="250px">
+                            <p class="commitee-names">S Muralidhara</p>
+                            <p class="position">BMSE, India</p>
+
+                        </div>
+                        <div>
+                            <img src="img/souvik_bhattacharya.jpeg" width="250px" height="250px">
+                            <p class="commitee-names">Souvik Bhattacharya</p>
+                            <p class="position">BITS Pilani K K Birla Goa Campus, India</p>
+
+                        </div>
                     </div>
                 </div>
             </section>
@@ -309,10 +363,10 @@
             <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
             <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
             <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
-            <img class="" src="img/MIT LOGO.jpg" width="170px;" />
+            <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
         </div>
     </div>
-    <!-- Footer Start -->
+    <!-- Footer Start -->u
     <!-- Footer Start -->
     <footer id="footer">
         <div class="footer-top">
