--- a/index.html
+++ b/index.html
@@ -180,17 +180,18 @@
                                                     ICDDS’22, a flagship conference of IEEE Computer Society Bangalore
                                                     Chapter, invites researchers, engineers, and subject matter experts
                                                     from academia, industry, and start-ups to present their latest
-                                                    innovations in Data/Decision Science (DDS) and their applications.
+                                                    innovations in Data/Decision Systems (DDS) and their applications
                                                 </p>
-                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii) Systems Research <br>(iii) Applications. <br>Authors are
-                                                    encouraged to submit their original work(s) in any of these tracks.
+                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii)
+                                                    Systems Research <br>(iii) Applications. <br>Authors are
+                                                    encouraged to submit their original work(s) to any of these tracks.
                                                 </p>
                                                 <p>Track-I Foundational Research aims to receive submissions from
                                                     theory to novel findings and current practices in all aspects of
                                                     Data/Decision science</p>
-                                                <p>Track-II (Systems Research) is focused on research addressing
+                                                <p>Track-II Systems Research is focused on research addressing
                                                     the system aspects data/decision science.</p>
-                                                <p>Track-III (Applications) aims to attract submissions related
+                                                <p>Track-III Applications aims to attract submissions related
                                                     to real-world problems and their solution approach using
                                                     data/decision science.</p>
                                                 <p>
@@ -223,7 +224,8 @@
                             <img class="partners" src="img/BMS LOGO.jpg" />
                             <img class="partners" src="img/RV LOGO.jpg" />
                             <img class="partners" src="img/VVCE LOGO.jpg" />
-                            <img class="partners" src="img/MIT LOGO.jpg" />
+                            <img class="partners" src="img/MAHE-logo-high-res.jpg" height="75" width="100"
+                                style="margin-top:20px;" />
 
                         </div>
 
@@ -309,11 +311,15 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-links">
-                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
                             <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
-                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
+                                    class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
 
