--- a/contact.html
+++ b/contact.html
@@ -160,19 +160,16 @@
                         <div><button type="submit">Send Message</button></div>
                     </form>
                 </div>
-                
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <br>
-                    <h2 style="font-size: large;">Academic Partners</h2>
-                    <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
-                    <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
-                    <img class="img-fluid" src="img/BMS LOGO.jpg" />
-                </div>
-                <div class="col-md-2">
-                    <h2><br><br></h2>
-                    <img class="img-fluid" src="img/RV LOGO.jpg" />
-                    <img class="img-fluid" src="img/VVCE LOGO.jpg" />
-                    <img class="img-fluid" src="img/MIT LOGO.jpg" />
+                    <h3>Academic Partners</h3>
+                    <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+                    <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px"
+                        alt="partner-logos" />
+                    <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+                    <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+                    <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+                    <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
                 </div>
             </div>
         </div>
@@ -187,11 +184,15 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-links">
-                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
                             <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
-                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
+                                    class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
 
