--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -179,6 +179,68 @@
                             <p class="commitee-names-program">&#8226; Aditya Challa, BITS Pilani Goa, India</p>
                             <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Manikandan Ravikiran, R&D Center, Hitachi India
+                                Pvt. Ltd</p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;S Sathish Kumar, RNS Institute of Technology, India
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Ashoka DV,JSS Academy of Technical Education, India
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Naveen Aradhya, JSS Academy of Technical Education,
+                                India
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;B. Sathish Babu, RVCE, India
+
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;P Jayarekha, BMSCE, India
+
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Nagaraja R, AMC, India
+
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Anjan Krishnamurthy, BMSIT, India
+
+
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names-program">&#8226;Srinath S, SJCE, India
+
+
+                            </p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
                     </div>
 
                 </div>
