--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -138,110 +138,90 @@
 
                     <div class="image-holder-program">
                         <div>
-                            <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Sravan Danda, BITS Pilani Goa, India</p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Seema Chopra, Boeing, India</p>
-                            <!-- <p class="position">Boeing, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Manik Gupta, BITS Pilani Goa, India</p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250ix" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Surjay Ghosh, BITS Pilani Goa, India</p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Venkatakrishnan Ramaswam, BITS Pilani Hyderabad,
                                 India</p>
-                            <!-- <p class="position">BITS Pilani Hyderabad, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Basabdatta Bhattacharya, BITS Pilani Goa, India
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Archana Mathur, NMIT, India</p>
-                            <!-- <p class="position">NMIT, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226; Aditya Challa, BITS Pilani Goa, India</p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
                             <p class="commitee-names-program">&#8226;Manikandan Ravikiran, R&D Center, Hitachi India
                                 Pvt. Ltd</p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;S Sathish Kumar, RNS Institute of Technology, India
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;Ashoka DV,JSS Academy of Technical Education, India
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;Naveen Aradhya, JSS Academy of Technical Education,
                                 India
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;B. Sathish Babu, RVCE, India
 
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;P Jayarekha, BMSCE, India
 
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;Nagaraja R, AMC, India
 
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;Anjan Krishnamurthy, BMSIT, India
 
 
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
-                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+
                             <p class="commitee-names-program">&#8226;Srinath S, SJCE, India
-
-
                             </p>
-                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
+                        </div>
+                        <div>
+
+                            <p class="commitee-names-program">&#8226;Sahana Prabhu, Bosch Research and Technology
+                                Centre, India
+                            </p>
                         </div>
                     </div>
+
+
 
                 </div>
             </section>
