--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -219,6 +219,16 @@
                                 Centre, India
                             </p>
                         </div>
+                          <div>
+
+                            <p class="commitee-names-program">&#8226;Usha J, India
+                            </p>
+                        </div>
+                          <div>
+
+                            <p class="commitee-names-program">&#8226;Shanta Ranga Swamy, RVCE, India
+                            </p>
+                        </div>
                     </div>
 
 
