Updated Organizing Committee

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -147,7 +147,7 @@
                         <div>
                             <img src="https://images.squarespace-cdn.com/content/v1/59a437cce5dd5b9b6401c23a/1527641211426-MLUQZNOOMZC9KNV77SDX/Abhyu.png"
                                 width="250px" height="250px">
-                            <p class="commitee-names">Abhyuday Mondal</p>
+                            <p class="commitee-names">Abhyuday Mandal</p>
                             <p class="position">University of Georgia, USA</p>
                         </div>
                         <div>
