--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -333,9 +333,9 @@
 
                         </div>
                         <div>
-                            <img src="img/" width="250px" height="250px">
+                            <img src="img/S.Muralidhara.jpg" width="250px" height="250px">
                             <p class="commitee-names">S Muralidhara</p>
-                            <p class="position">BMSE, India</p>
+                            <p class="position">BMSCE, India</p>
 
                         </div>
                         <div>
@@ -360,7 +360,7 @@
             <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
         </div>
     </div>
-    <!-- Footer Start -->u
+    <!-- Footer Start -->
     <!-- Footer Start -->
     <footer id="footer">
         <div class="footer-top">
