local organizing chair

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -220,6 +220,21 @@
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
+                        <h3>Local Organizing Chairs</h3>
+                    </header>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/Sandeep Varma.png" width="250px" height="250px">
+                            <p class="commitee-names">N. Sandeep Varma</p>
+                            <p class="position">BMSCE, Bangalore</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="agenda">
+                <div class="container">
+                    <header class="section-header">
                         <h3>Finance Chairs</h3>
                     </header>
                     <div class="image-holder">
@@ -229,8 +244,6 @@
                             <p class="position">RVCE, India</p>
                         </div>
                     </div>
-
-
                 </div>
             </section>
 
