--- a/Applications.html
+++ b/Applications.html
@@ -118,6 +118,7 @@
               <h1 class="banner-header">
                 DDS and applications
               </h1>
+              <h3>Real-world problems and their solution approach using data/decision science</h3>
             </div>
             <div class="col-md-6">
               <p class="banner-nav">
@@ -176,6 +177,11 @@
     </div>
     <div class="col-md-2">
       <br>
+      <center>
+      <h2 style="font-size: x-large;">Sponsers</h2>
+      <br>
+      <img class="img-fluid" src="img/Dozee.png" />
+      <br><br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
 
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
@@ -184,6 +190,7 @@
       <img class="img-fluid" src="img/RV LOGO.jpg" />
       <img class="img-fluid" src="img/VVCE LOGO.jpg" />
       <img class="img-fluid" src="img/MAHE-logo-high-res.jpg" />
+    </center>
     </div>
   </div>
   <!-- Footer Start -->
