--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -83,7 +83,7 @@
 
           <li><a href="#">Call for Papers</a>
             <ul class="nav-dropdown">
-              <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+              <li><a href="Foundational-Research.html">Foundational Research</a></li>
               <li><a href="Systems-Research.html">Systems Research</a></li>
               <li><a href="Applications.html">Applications</a></li>
             </ul>
@@ -117,6 +117,7 @@
               <h1 class="banner-header">
                 Foundational Research
               </h1>
+              <h3>Theory to novel findings in all aspects of Data/Decision science</h3>
             </div>
             <div class="col-md-6">
               <p class="banner-nav">
@@ -185,6 +186,9 @@
     </div>
     <div class="col-md-2">
       <br>
+      <center><h2 style="font-size: x-large;">Sponsers</h2>
+      <img class="img-fluid" src="img/Dozee.png" />
+      <br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
       <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
@@ -192,6 +196,7 @@
       <img class="img-fluid" src="img/RV LOGO.jpg" />
       <img class="img-fluid" src="img/VVCE LOGO.jpg" />
       <img class="img-fluid" src="img/MAHE-logo-high-res.jpg" />
+      </center>
     </div>
   </div>
   <!-- Footer Start -->
