--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -364,6 +364,10 @@
         </div>
         <div class="col-md-3">
             <br>
+            <center>
+            <h3>Sponsers</h3>
+            <img class="" src="img/Dozee.png" width="170px;" height="150px" alt="partner-logos" />
+            <br><br><br>
             <h3>Academic Partners</h3>
             <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
             <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px" alt="partner-logos" />
@@ -371,6 +375,7 @@
             <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
             <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
             <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
+        </center>
         </div>
     </div>
     <!-- Footer Start -->
