--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -118,6 +118,7 @@
               <h1 class="banner-header">
                 DDS and System Research
               </h1>
+              <h3>System aspects of data/decision science</h3>
             </div>
             <div class="col-md-6">
               <p class="banner-nav">
@@ -181,6 +182,11 @@
 
     <div class="col-md-2">
       <br>
+      <center>
+      <h2 style="font-size:x-large;">Sponsers</h2>
+      <br>
+      <img class="img-fluid" src="img/Dozee.png" />
+      <br><br>
       <h2 style="font-size:larger;">Academic Partners</h2>
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
       <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
@@ -188,6 +194,7 @@
       <img class="img-fluid" src="img/RV LOGO.jpg" />
       <img class="img-fluid" src="img/VVCE LOGO.jpg" />
       <img class="img-fluid" src="img/MAHE-logo-high-res.jpg" />
+      </center>
     </div>
   </div>
 
