--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
 
                         </div>
                         <div class="col-md-2">
+                            <center><h2 style="font-size: x-large;">Sponsers</h2>
+                            <img class="partners" src="img/dozee.png" />
+                            <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
-
                             <img class="partners" src="img/APPCAIR LOGO.jpg" />
                             <img class="partners" src="img/BITS PILANI GOA LOGO.jpg" />
                             <img class="partners" src="img/BMS LOGO.jpg" />
@@ -226,7 +228,7 @@
                             <img class="partners" src="img/VVCE LOGO.jpg" />
                             <img class="partners" src="img/MAHE-logo-high-res.jpg" height="75" width="100"
                                 style="margin-top:20px;" />
-
+                            </center>
                         </div>
 
                     </div>
