--- a/contact.html
+++ b/contact.html
@@ -160,8 +160,11 @@
                         <div><button type="submit">Send Message</button></div>
                     </form>
                 </div>
-                <div class="col-md-3">
-                    <br>
+                <div class="col-md-4">
+                    <center>
+                    <h3>Sponsers</h3>
+                    <img  src="img/dozee.png" width="170px;" height="150px" alt="sponsers-logos"/>
+                    <br><br><br>
                     <h3>Academic Partners</h3>
                     <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
                     <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px"
@@ -170,6 +173,7 @@
                     <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
                     <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
                     <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
+                </center>
                 </div>
             </div>
         </div>
