--- a/venue.html
+++ b/venue.html
@@ -161,20 +161,21 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.4599577246213!2d77.56522136482171!3d12.942393090874972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae158b11e34d2f%3A0x5f4adbdbab8bd80f!2sBMS%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1647757828442!5m2!1sen!2sin"
                 width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
             <br>
-            <h2 style="font-size: larger;">Academic Partners</h2>
+            <center>
+            <h2 style="font-size: x-larger;">Sponsers</h2>
+            <img class="" src="img/dozee.png" width="170px;" height="150px" ; />
+            <br><br><br>
+            <h2 style="font-size: x-larger;">Academic Partners</h2>
 
             <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" ; />
             <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px" ; />
             <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" ; />
-
-        </div>
-        <div class="col-md-2">
-            <h2><br><br> </h2>
             <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" ; />
             <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" ; />
             <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" />
+        </center>
         </div>
     </div>
     <!-- Footer Starts-->
