--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                 <div class="col-md-4">
                     <center>
                     <h3>Sponsers</h3>
-                    <img  src="img/dozee.png" width="170px;" height="150px" alt="sponsers-logos"/>
+                    <img  src="img/Dozee.png" width="170px;" height="150px" alt="sponsers-logos"/>
                     <br><br><br>
                     <h3>Academic Partners</h3>
                     <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
