--- a/venue.html
+++ b/venue.html
@@ -165,7 +165,7 @@
             <br>
             <center>
             <h2 style="font-size: x-larger;">Sponsers</h2>
-            <img class="" src="img/dozee.png" width="170px;" height="150px" ; />
+            <img class="" src="img/Dozee.png" width="170px;" height="150px" ; />
             <br><br><br>
             <h2 style="font-size: x-larger;">Academic Partners</h2>
 
