--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -365,7 +365,7 @@
         <div class="col-md-3">
             <br>
             <center>
-            <h3>Sponsers</h3>
+            <h3>Sponsors</h3>
             <img class="" src="img/Dozee.png" width="170px;" height="150px" alt="partner-logos" />
             <br><br><br>
             <h3>Academic Partners</h3>
