--- a/venue.html
+++ b/venue.html
@@ -164,7 +164,7 @@
         <div class="col-md-4">
             <br>
             <center>
-            <h2 style="font-size: x-larger;">Sponsers</h2>
+            <h2 style="font-size: x-larger;">Sponsors</h2>
             <img class="" src="img/Dozee.png" width="170px;" height="150px" ; />
             <br><br><br>
             <h2 style="font-size: x-larger;">Academic Partners</h2>
