--- a/Applications.html
+++ b/Applications.html
@@ -178,7 +178,7 @@
     <div class="col-md-2">
       <br>
       <center>
-      <h2 style="font-size: x-large;">Sponsers</h2>
+      <h2 style="font-size: x-large;">Sponsors</h2>
       <br>
       <img class="img-fluid" src="img/Dozee.png" />
       <br><br><br>
