--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -186,7 +186,7 @@
     </div>
     <div class="col-md-2">
       <br>
-      <center><h2 style="font-size: x-large;">Sponsers</h2>
+      <center><h2 style="font-size: x-large;">Sponsors</h2>
       <img class="img-fluid" src="img/Dozee.png" />
       <br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
