--- a/contact.html
+++ b/contact.html
@@ -162,8 +162,8 @@
                 </div>
                 <div class="col-md-4">
                     <center>
-                    <h3>Sponsers</h3>
-                    <img  src="img/Dozee.png" width="170px;" height="150px" alt="sponsers-logos"/>
+                    <h3>Sponsors</h3>
+                    <img  src="img/Dozee.png" width="170px;" height="150px" alt="Sponsors-logos"/>
                     <br><br><br>
                     <h3>Academic Partners</h3>
                     <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
