--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
                         </div>
                         <div class="col-md-2">
-                            <center><h2 style="font-size: x-large;">Sponsers</h2>
+                            <center><h2 style="font-size: x-large;">Sponsors</h2>
                             <img class="partners" src="img/Dozee.png" />
                             <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
