[Fix] Sponsor logo

--- a/Applications.html
+++ b/Applications.html
@@ -180,7 +180,7 @@
       <center>
       <h2 style="font-size: x-large;">Sponsors</h2>
       <br>
-      <img class="img-fluid" src="img/Dozee.png" />
+      <img class="img-fluid" src="img/dozee.png" />
       <br><br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
 
