--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -187,7 +187,7 @@
     <div class="col-md-2">
       <br>
       <center><h2 style="font-size: x-large;">Sponsors</h2>
-      <img class="img-fluid" src="img/Dozee.png" />
+      <img class="img-fluid" src="img/dozee.png" />
       <br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
