--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -366,7 +366,7 @@
             <br>
             <center>
             <h3>Sponsors</h3>
-            <img class="" src="img/Dozee.png" width="170px;" height="150px" alt="partner-logos" />
+            <img class="" src="img/dozee.png" width="170px;" height="150px" alt="partner-logos" />
             <br><br><br>
             <h3>Academic Partners</h3>
             <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
