--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         </div>
                         <div class="col-md-2">
                             <center><h2 style="font-size: x-large;">Sponsors</h2>
-                            <img class="partners" src="img/Dozee.png" />
+                            <img class="partners" src="img/dozee.png" />
                             <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
                             <img class="partners" src="img/APPCAIR LOGO.jpg" />
