--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -185,7 +185,7 @@
       <center>
       <h2 style="font-size:x-large;">Sponsors</h2>
       <br>
-      <img class="img-fluid" src="img/Dozee.png" />
+      <img class="img-fluid" src="img/dozee.png" />
       <br><br>
       <h2 style="font-size:larger;">Academic Partners</h2>
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
